--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
   </head>
   <body>
     <a href='generator'>Generator</a>
+    <br><br>
+    <a href='generator_updated'>Generator_0.6.7</a>
   </body>
 </html>
