--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset='utf-8'>
   </head>
   <body>
+    I hate people! <br><br>
     <a href='generator'>Generator</a>
-    <br><br>
-    <a href='generator_updated'>Generator_0.6.7</a>
+    <br><br>Have a nice day=)
   </body>
 </html>
