--- a/generator.html
+++ b/generator.html
@@ -137,7 +137,7 @@
           var result = "";
           result += "Hello [[name]]!\n\n"+DATA[4].split('\n').join('').split('<br>').join('\n');
           result += "\n\nGet 16% OFF any order over 5 pages\n\n";
-          result += 'https://www.'+LIST[CURRENT][0]+'/order/?numpages=5&promo='+DATA[2]+'&l=[[autohash]]&utm_source=manual&utm_medium=email&utm_campaign='+DATA[3]+LIST[CURRENT][2];
+          result += 'https://www.'+LIST[CURRENT][0]+'/order/?numpages=5&promo='+DATA[2]+'&l=[[autohash]]&utm_source=manual&utm_medium=email&utm_campaign='+DATA[3]+LIST[CURRENT][3];
           result += '\n\n' + DATA[5].split('\n').join('').split('<br>').join('\n');
           result += "\n\nBest Regards,\nAlice Fisher\n\n";
           result += "You are receiving this email because you are a registered user of "+drop(LIST[CURRENT][0], ['.com','.co','.uk','.au','.org'])+"."
@@ -231,13 +231,23 @@
   
   <body style='margin: 0;-webkit-text-size-adjust: 100%;background: #e1e9ed;'>
     <div style='display:none;max-height:0;overflow:hidden;'>
-      @MARKER_PRE@
+      @MARKER_PRE@                                                                                 <br>
     </div>
     <!--[if (gte mso 9)|(IE)]>
       <table width='600' align='center' style='border-collapse: collapse;' border='0'>
       <tr>
       <td valign='top' width='600' style='padding-left: 0px; padding-right: 0px;'>
     <![endif]-->
+  
+  <table cellpadding='8' cellspacing='0' lang='x-outer'  border='0' style='border-collapse: collapse; table-layout: fixed; font-family: "Open Sans",sans-serif; width: 100%; max-width: 600px; margin-left: auto; margin-right: auto;' align='center'>
+      <tbody>
+        <tr>
+          <td colspan='4'>
+            <div><font style='font-size: 12px;color: #1c2837;'>Please add this address to your Contact List to continue receiving emails in your inbox.</font></div>
+          </td>
+        </tr>
+      </tbody>
+    </table> 
   
     <table cellpadding='0' cellspacing='0' lang='x-outer'  border='0' style='border-collapse: collapse; table-layout: fixed; font-family: "Open Sans",sans-serif; width: 100%; max-width: 600px; margin-left: auto; margin-right: auto; -webkit-box-shadow: 0 3px 9px #313d4c; box-shadow: 0 3px 9px #313d4c;' align='center'>
       <tbody>
@@ -267,7 +277,7 @@
         
         <!-- TEXT $ BUTTON -->
         <tr bgcolor='#ffffff'>
-          <td colspan='4' style='padding: 0px 20px 0px 20px;'>
+          <td colspan='4' style='padding: 0px 12px 0px 12px;'>
             
             <p style='margin: 1em 0; font-size: 16px; line-height: 1.5em; color: #3b3b3b; font-family: "Open Sans", sans-serif;'>
               Hello [[name]]!
