--- a/generator.html
+++ b/generator.html
@@ -243,7 +243,9 @@
       <tbody>
         <tr>
           <td colspan='4'>
+            <center>
             <div><font style='font-size: 12px;color: #1c2837;'>Please add this address to your Contact List to continue receiving emails in your inbox.</font></div>
+            </center>
           </td>
         </tr>
       </tbody>
